--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,12 +17,13 @@
         <servlet-class>ShowExceptionsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
+        <servlet-name>ShowExceptionsServlet</servlet-name>
+        <url-pattern>/log/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>testServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ShowExceptionsServlet</servlet-name>
-        <url-pattern>/log/</url-pattern>
-    </servlet-mapping>
+
 
 </web-app>
